--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     async function botReply(userText) {
       typingDiv.style.display = "block";
       try {
-        const res = await fetch("/chat", {
+        const res = await fetch("http://127.0.0.1:5000/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ message: userText })
